# task_manager

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: .run-e2e-tests.yml  run-unit-tests.yml
app/: main.py
app/core/: auth.py  configs.py
app/domain/: errors.py
app/domain/entities/: attachment.py  authenticate.py  category.py  comment.py  notification.py  subtask.py  task.py  user.py
app/domain/use_cases/attachments/: create.py  delete.py  list.py
app/domain/use_cases/categories/: create.py  list.py
app/domain/use_cases/comments/: create.py  delete.py  list.py
app/domain/use_cases/notifications/: send_due_task_notification.py
app/domain/use_cases/subtasks/: create.py  (+4 more)
app/http/api/: routers.py
app/infra/db/: models.py  session.py
app/infra/dramatiq/: scheduler.py  tasks.py
app/infra/factories/: attachment_factory.py  category_factory.py  comment_factory.py  notification_factory.py  session_factory.py  subtask_factory.py  task_factory.py  user_factory.py
app/infra/repositories/: attachment_repository.py  category_repository.py  comment_repository.py  notification_repository.py  subtask_repository.py  task_repository.py  user_repository.py
app/infra/services/: email_service.py
app/templates/: email_template.html
app/tests/: conftest.py
app/utils/: datetime.py
app/utils/tests/: make_attachment.py  make_comment.py  make_subtask.py  make_task.py  make_user.py
docker/dramatiq/: start_dramatiq_tasks.sh
docker/web/: start.sh
(+90 files in other folders)
