[tool.poetry]
name = "task-manager"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.115.0"
uvicorn = "^0.31.1"
pydantic = "^2.9.2"
faker = "^30.3.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pyjwt = "^2.9.0"
pwdlib = {extras = ["argon2"], version = "^0.2.1"}
pydantic-settings = "^2.5.2"
alembic = "^1.13.3"
sqlalchemy = "^2.0.36"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.10"
httpx = "^0.27.2"
pytest-env = "^1.1.5"
python-multipart = "^0.0.12"
slowapi = "^0.1.9"
flake8 = "^7.1.1"
black = "^24.10.0"
pre-commit = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
skip-string-normalization = true
